syntax = "proto3";

option go_package = "./v1;pb";
package log.v1;

service LogService {
    rpc ListLog(QueryRequest) returns (QueryLogResp) {}
    rpc CreateLog(Log) returns (RetInfo) {}
    rpc UpdateLog(Log) returns (RetInfo) {}
    rpc DeleteLog(DeleteIds) returns (RetInfo) {}
}

message Log {
    int64 id = 1;
    int64 userId = 2;
    string service = 3;
    string type = 4;
    string content = 5;
}

message QueryLogResp {
    RetInfo ret = 1;
    repeated Log data = 2;
    int64 total = 3;
}

message QueryRequest {
    string q = 1;
    int64 page = 2;
    int64 size = 3;
    string order =4;
}

message DeleteIds{
    repeated int64 ids = 1;
}

message RetInfo {
    bool status = 1;
    string msg = 2;
}
